[package]
name = "mandelbrot"
version = "0.1.1"
authors = ["TheWebDevel <sathish@skcript.com>"]
edition = "2018"
description = "Generate The Mandelbrot set using concurrency."
homepage = "https://github.com/TheWebDevel/programming-rust/tree/master/mandelbrot"
repository = "https://github.com/TheWebDevel/programming-rust/tree/master/mandelbrot"
keywords = ["concurrency", "mandelbrot"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
autotests = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.1.27"
image = "0.13.0"
crossbeam = "0.2.8"
